# physical_testbed_MKFirm

./: .gitignore  .zenodo.json  LICENSE  README.md
configs/: receiver.sh  reset_sender_tc.sh  sender.sh  switch_startup-config_60  switch_startup-config_61  timesync.sh
pendulum_code/sender-receiver-linux/: .gitignore  CMakeLists.txt  README.md
pendulum_code/sender-receiver-linux/Config/: receiver_mlqr.json  sender_et-tt_run15min.json
pendulum_code/sender-receiver-linux/DelayHistogram/: DelayHistogram.cpp  DelayHistogram.h  uplink_histogram.json
pendulum_code/sender-receiver-linux/Helper/: MicrocontrollerResetter.cpp
pendulum_code/sender-receiver-linux/Logging/: Logger.cpp  Logger.h  PendulumLogger.cpp  PendulumLogger.h
pendulum_code/sender-receiver-linux/Logging/LogEntries/: ActuatorLogEntry.cpp  ActuatorLogEntry.h  LogEntry.cpp  LogEntry.h  PendulumLogEntry.cpp  PendulumLogEntry.h  SenderFeedbackLogEntry.cpp  SenderFeedbackLogEntry.h
pendulum_code/sender-receiver-linux/Logging/LogEntries/SchedulingInfoEntries/: SchedulingInfoEntry.h  TokenBucketInfoEntry.cpp  TokenBucketInfoEntry.h
pendulum_code/sender-receiver-linux/Parameters/: Parameters.h
pendulum_code/sender-receiver-linux/PendulumReceiverSide/: PendulumReceiver.cpp  PendulumReceiver.h  PendulumReceiverMain.cpp  ReceiverConfig.cpp  ReceiverConfig.h
pendulum_code/sender-receiver-linux/PendulumSenderSide/: MPTBSubConfig.cpp  MPTBSubConfig.h  PendulumSender.cpp  PendulumSender.h  PendulumSenderMain.cpp  SenderConfig.cpp  SenderConfig.h  SenderMultiConfig.cpp  SenderMultiConfig.h
pendulum_code/sender-receiver-linux/Scheduling/: MultiPriorityTokenBucket.cpp  MultiPriorityTokenBucket.h  PriorityDeterminer.cpp  PriorityDeterminer.h
pendulum_code/sender-receiver-linux/SerialPortScan/: TeensyPortDetector.cpp  TeensyPortDetector.h
pendulum_code/sender-receiver-teensy/: README.md
pendulum_code/sender-receiver-teensy/pendulum_receiver1/: KalmanAndMLQRParameters.h  pendulum_receiver1.ino
pendulum_code/sender-receiver-teensy/pendulum_sender1/: pendulum_sender1.ino
results/: ieee.mplstyle  maximum_median_angle.py
results/15min/run_15min_1/: pendulumsender_et-tt90_0.json  pendulumsender_et-tt90_1.json  pendulumsender_et-tt90_2.json  pendulumsender_et-tt90_3.json  pendulumsender_et-tt90_4.json  pendulumsender_et-tt90_5.json  pendulumsender_et-tt90_6.json  pendulumsender_et-tt90_7.json  pendulumsender_et-tt90_8.json  pendulumsender_et-tt90_base.json
results/15min/run_15min_2/: pendulumsender_et-tt90_0.json  pendulumsender_et-tt90_1.json  pendulumsender_et-tt90_2.json  pendulumsender_et-tt90_3.json  pendulumsender_et-tt90_4.json  pendulumsender_et-tt90_5.json  pendulumsender_et-tt90_6.json  pendulumsender_et-tt90_7.json  pendulumsender_et-tt90_base.json
results/15min/run_15min_3/: pendulumsender_et-tt90_0.json  pendulumsender_et-tt90_1.json  pendulumsender_et-tt90_2.json  pendulumsender_et-tt90_3.json  pendulumsender_et-tt90_4.json  pendulumsender_et-tt90_5.json  pendulumsender_et-tt90_6.json  pendulumsender_et-tt90_7.json  pendulumsender_et-tt90_8.json  pendulumsender_et-tt90_base.json
results/15min/run_15min_4/: pendulumsender_et-tt90_0.json  pendulumsender_et-tt90_1.json  pendulumsender_et-tt90_2.json  pendulumsender_et-tt90_3.json  pendulumsender_et-tt90_4.json  pendulumsender_et-tt90_5.json  pendulumsender_et-tt90_6.json  pendulumsender_et-tt90_7.json  pendulumsender_et-tt90_8.json  pendulumsender_et-tt90_9.json  pendulumsender_et-tt90_base.json  pendulumsender_et-tt90_no_et.json
